// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary correctly when no expenses are present 1`] = `
<div>
  Viewing 
  0
   
  expenses
   totalling 
  $0.00
</div>
`;

exports[`should render ExpensesSummary correctly with multiple expenses 1`] = `
<div>
  Viewing 
  2
   
  expenses
   totalling 
  $99.99
</div>
`;

exports[`should render ExpensesSummary correctly with one expense 1`] = `
<div>
  Viewing 
  1
   
  expense
   totalling 
  $99.00
</div>
`;
